hostandpathingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-path-based-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: sample.abc.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 80
          - path: /nginx/(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8082
